# langchain_study

./: .gitignore  main.py  pyproject.toml  requirements.txt
05_0_retrieval/: ingestion.py  mediumblog1.txt
05_1_vectorstore_in_memory/: main.py
05_retrieval/: ingestion.py
06_documentation/: ingestion.py
06_documentation/chroma_db/: chroma.sqlite3
06_vectorstore_in_memory/: main.py
06_vectorstore_in_memory/faiss_index_react/: index.faiss  index.pkl
07_rag/backend/: core.py
documents/: income_tax.txt  real_estate_tax.md  real_estate_tax.txt
ipynb/: 2.retrieval.ipynb  3.2_tools_intro.ipynb  3.3_langgraph_tools.ipynb  3.4_langgraph-internal-tools.ipynb  3.5_chat_history.ipynb  3.6_human-in-the-lopop.ipynb  3.7_stock-multi-agent.ipynb  3.rewrite.ipynb  4.self-rag.ipynb  5.3.4_Streamable.ipynb  5.corrective.ipynb  6. adaptive-rag.ipynb  7,parallel-agent.ipynb  8. multi-agent.ipynb  income_tax_graph.py  mcp_server.py  real_estate_tax_graph.py
langchain/05_0_retrieval/: main.py
langchain/06_documentation/: ingestion.py
langchain/07_rag/backend/: core.py
langchain_study/05_0_retrieval/: main.py
langchain_study/06_documentation/: ingestion.py  logger.py
langchain_study/07_rag/backend/: core.py
langgraph/01-reflection-agent/: chains.py  main.py
langgraph/02-reflexion-agent/: chains.py  main.py
